# belalang

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  flake.nix  rust-toolchain.toml
.cargo/: config.toml
.github/: renovate.json5
.github/workflows/: ci.yml  deploy.yaml  pr-work.yml  test.yml
belalang/: Cargo.toml
belalang/examples/: factorial.bl  fizzbuzz.bl
belalang/src/: lib.rs  main.rs  run.rs
belalang/tests/: examples.rs
belalang_allocator/: Cargo.toml
belalang_allocator/src/: allocator.rs  block_meta.rs  bump_block.rs  heap.rs  lib.rs
belalang_allocator/src/heap/: allocator.rs  block.rs  block_meta.rs  bump_block.rs
belalang_cli/: Cargo.toml
belalang_cli/src/: lib.rs  main.rs
belalang_cli/tests/: examples.rs
belalang_comp/: Cargo.toml
belalang_comp/src/: code.rs  compiler.rs  disassembly.rs  lib.rs  object.rs  scope.rs  symbol_table.rs
belalang_comp/tests/: compiler.rs
belalang_compiler/: Cargo.toml
belalang_compiler/debug/: compiler.rs  lexer.rs  parser.rs
belalang_compiler/src/: ast.rs  compiler.rs  error.rs  lib.rs
belalang_compiler/src/ast/: expressions.rs  mod.rs  parser.rs  statements.rs
belalang_compiler/src/codegen/: disassembler.rs  mod.rs  scope.rs
belalang_compiler/src/lexer/: mod.rs  tokens.rs
belalang_compiler/src/parser/: mod.rs
belalang_compiler/src/tokens/: lexer.rs  mod.rs
belalang_compiler/tests/: compiler.rs  expressions.rs  lexer.rs  statements.rs
belalang_compiler/tests/common/: mod.rs
belalang_core/src/: error.rs  lexer.rs  parser.rs  utils.rs
belalang_core/src/ast/: expressions.rs  program.rs
belalang_core/tests/: expressions.rs  lexer.rs  statements.rs
belalang_core/tests/common/: mod.rs
belalang_devel/: Cargo.toml
belalang_devel/src/: errors.rs  lib.rs  ops.rs
belalang_eval/: Cargo.toml
belalang_eval/src/: environment.rs  evaluator.rs  lib.rs
belalang_eval/tests/: evaluating.rs
belalang_macros/: Cargo.toml
belalang_macros/src/: lib.rs
belalang_vm/: Cargo.toml
belalang_vm/src/: allocator.rs  builtins.rs  bytecode.rs  error.rs  errors.rs  frame.rs  globals.rs  lib.rs  macros.rs  object.rs  opcode.rs  prelude.rs  stack.rs  types.rs  vm.rs
belalang_vm/src/allocator/: block.rs  block_meta.rs
belalang_vm/src/mem/: heap.rs  stack.rs
belalang_vm/src/object/: boolean.rs  integer.rs
belalang_vm/src/types/: array.rs  base.rs  boolean.rs  integer.rs  object.rs  registry.rs  string.rs
belalang_vm/tests/: types.rs  vm.rs
belalang_web/: Cargo.toml  package.json  pnpm-lock.yaml
belalang_web/src/: lib.rs  main.ts
cli/: Cargo.toml
cli/examples/: factorial.bl  fizzbuzz.bl
cli/src/: lib.rs  main.rs
cli/tests/: examples.rs
comp/: Cargo.toml
comp/src/: code.rs  compiler.rs  error.rs  lib.rs  object.rs
compiler/belalang_compiler/: Cargo.toml
compiler/belalang_compiler/debug/: parser.rs
compiler/belalang_compiler/src/: error.rs
compiler/belalang_compiler/tests/: expressions.rs  lexer.rs
compiler/belc/: Cargo.toml
compiler/belc/src/: error.rs  lib.rs
compiler/belc/src/ast/: expressions.rs  parser.rs  statements.rs
compiler/belc/src/codegen/: disassembler.rs  mod.rs  scope.rs
compiler/belc/src/tokens/: lexer.rs  mod.rs
compiler/belc/tests/: compiler.rs  expressions.rs  lexer.rs  statements.rs
compiler/belc/tests/common/: mod.rs
compiler/belc/tests/testsuite/: compiler.rs  expressions.rs  lexer.rs  main.rs  statements.rs
compiler/belc_ast/: Cargo.toml
compiler/belc_ast/src/: expressions.rs  lib.rs  parser.rs  statements.rs
compiler/belc_codegen_vm/: Cargo.toml
compiler/belc_codegen_vm/src/: error.rs  lib.rs  scope.rs
compiler/belc_lexer/: Cargo.toml
compiler/belc_lexer/src/: lexer.rs  lib.rs
core/: Cargo.toml
core/src/: error.rs  evaluator.rs  lexer.rs  lib.rs  parser.rs  token.rs
core/src/ast/: expressions.rs
core/src/evaluator/: mod.rs
core/src/parser/: infix.rs  mod.rs  prefix.rs
core/tests/: evaluating.rs  expressions.rs  lexer.rs  statements.rs
core/tests/common/: mod.rs
crates/belalang/: Cargo.toml
crates/belalang/src/: lib.rs  main.rs  run.rs
crates/belalang_compiler/: Cargo.toml
crates/belalang_compiler/debug/: compiler.rs  lexer.rs  parser.rs
crates/belalang_compiler/src/: lib.rs
crates/belalang_compiler/src/ast/: expressions.rs  parser.rs
crates/belalang_compiler/src/codegen/: disassembler.rs  mod.rs  scope.rs
crates/belalang_compiler/src/tokens/: lexer.rs  mod.rs
crates/belalang_compiler/tests/: compiler.rs  expressions.rs  lexer.rs
crates/belalang_compiler/tests/common/: mod.rs
crates/belalang_vm/: Cargo.toml
debug/: Cargo.toml
debug/src/: compiler.rs  lexer.rs  parser.rs  vm.rs
devtools/belalang_interactive_debug/: Cargo.toml
devtools/beltools_debug/: Cargo.toml
devtools/beltools_tests/: Cargo.toml
eval/: Cargo.toml  LICENSE
eval/src/: builtins.rs  error.rs  evaluator.rs  object.rs
examples/: 00_hello_belalang.bel  01_variables.bel  02_conditionals.bel  03_functions.bel  04_while_loops.bel  05_factorial.bel  factorial.bel  fizzbuzz.bel
runtime/belalang_gc/: Cargo.toml
runtime/belalang_macros/: Cargo.toml
runtime/belalang_vm/: Cargo.toml
src/: error.rs  lexer.rs  lib.rs  macros.rs  main.rs  parser.rs  repl.rs  run.rs  test_util.rs  testing.rs  token.rs  utils.rs
src/ast/: expression_statement.rs  expressions.rs  identifier.rs  integer_literal.rs  let_statement.rs  mod.rs  prefix_expression.rs  program.rs  return_statement.rs  statements.rs
src/commands/: compile.rs  dis.rs  mod.rs
src/evaluator/: builtins.rs  environment.rs  error.rs  mod.rs  object.rs
src/object/: boolean.rs  environment.rs  integer.rs  mod.rs  null.rs
src/parser/: error.rs  infix.rs  mod.rs  prefix.rs
tests/: evaluating.rs  expressions.rs  lexer.rs  statements.rs
tests/common/: mod.rs
vm/: Cargo.toml
vm/belvm/: Cargo.toml
vm/belvm_bytecode/: Cargo.toml
vm/belvm_gc/: Cargo.toml
vm/belvm_macros/: Cargo.toml
vm/belvm_std/: Cargo.toml
vm/src/: error.rs  vm.rs
web/: Cargo.toml  index.html  package.json  pnpm-lock.yaml  vite.config.ts
web/src/: lib.rs  main.css  main.ts
(+117 files in other folders)
