[workspace]
resolver = "3"
members = ["belalang", "compiler/*", "devtools/*", "vm/*"]
default-members = ["belalang"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["Vito Secona <secona00@gmail.com>"]

[workspace.lints.clippy]
self_named_module_files = "deny"

[workspace.dependencies]
clap = "4.5.4"
proc-macro2 = "1.0"
syn = "2.0"
thiserror = "1.0.61"
quote = "1.0"

# -- Belalang stuff
belc = { path = "./compiler/belc" }
belvm = { path = "./vm/belvm" }
belvm_bytecode = { path = "./vm/belvm_bytecode" }
belvm_gc = { path = "./vm/belvm_gc/" }
belvm_macros = { path = "./vm/belvm_macros" }
belvm_std = { path = "./vm/belvm_std" }
beltools_tests = { path = "./devtools/beltools_tests" }
