[package]
name = "belalang"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
belc.workspace = true
belc_lexer.workspace = true
belvm.workspace = true
clap.workspace = true

# =============================
# -- workspace configuration --
# =============================

[workspace]
resolver = "3"
members = ["compiler/*", "devtools/*", "vm/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["Vito Secona <secona00@gmail.com>"]

[workspace.lints.clippy]
self_named_module_files = "deny"

[workspace.dependencies]
clap = "4.5.4"
proc-macro2 = "1.0"
syn = "2.0"
thiserror = "1.0.61"
unicode-ident = "1.0.18"
quote = "1.0"

# -- workspace dependencies --
belc = { path = "./compiler/belc" }
belc_lexer = { path = "./compiler/belc_lexer" }
belvm = { path = "./vm/belvm" }
belvm_bytecode = { path = "./vm/belvm_bytecode" }
belvm_gc = { path = "./vm/belvm_gc/" }
belvm_macros = { path = "./vm/belvm_macros" }
belvm_std = { path = "./vm/belvm_std" }
beltools_tests = { path = "./devtools/beltools_tests" }
