[package]
name = "belalang"
version = "0.1.0"
edition = "2021"
publish = false
license = "Apache-2.0"

[dependencies]
belalang_core = { path = "../belalang_core" }
belalang_compiler = { path = "../belalang_compiler" }
belalang_vm = { path = "../belalang_vm" }
clap = { version = "4.5.4", features = ["derive"] }
