[package]

name = "belc"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
belc_ast.workspace = true
belc_codegen_vm.workspace = true
belc_lexer.workspace = true
belvm_bytecode.workspace = true
thiserror.workspace = true
unicode-ident.workspace = true
