[package]
name = "belalang_compiler"
version = "0.1.0"
edition = "2021"
publish = false
license = "Apache-2.0"

[[bin]]
name = "debug_lexer"
path = "debug/lexer.rs"
required-features = ["debug"]

[[bin]]
name = "debug_parser"
path = "debug/parser.rs"
required-features = ["debug"]

[[bin]]
name = "debug_compiler"
path = "debug/compiler.rs"
required-features = ["debug"]

[features]
debug = []

[dependencies]
belalang_vm.workspace = true
thiserror.workspace = true
