[package]
name = "beltools_debug"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
belc.workspace = true
belc_ast.workspace = true
belc_codegen_vm.workspace = true
belc_lexer.workspace = true
belvm.workspace = true
thiserror.workspace = true
